--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=roms-documents
+
+#Redis configuration
+spring.data.redis.host=${ECS_REDIS_HOST_NAME:127.0.0.1}
+spring.data.redis.port=${ECS_REDIS_PORT:6379}
+spring.data.redis.password=${ECS_REDIS_ACCESS_KEY}
